deploy/mc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-server
  labels:
    app: minecraft
spec:
  selector:
    matchLabels:
      app: minecraft
      tier: server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minecraft
        tier: server
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64

      containers:
      - name: mc-backup
        image: itzg/mc-backup
        volumeMounts:
        - name: minecraft-data
          mountPath: /data
          readOnly: true
        - name: minecraft-backup
          mountPath: /backups
        # Add other volume mounts as necessary
      - name: minecraft-server
        image: itzg/minecraft-server
        ports:
        - containerPort: 25565
          name: minecraft
        - containerPort: 25575
          name: rcon
        volumeMounts:
        - name: minecraft-data
          mountPath: /data
      volumes:
      - name: minecraft-data
        persistentVolumeClaim:
          claimName: minecraft-data
      - name: minecraft-backup
        persistentVolumeClaim:
          claimName: minecraft-backup
