deploy/mc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-server # Name of the resource and also its hostname
  labels:
    app: minecraft
spec:
  ports:
    - port: 25565 
      targetPort: 25565
      name: minecraft
    - port: 25575 
      targetPort: 25575
      name: rcon
  selector:
    app: minecraft
    tier: server
  type: LoadBalancer
