deploy/rcon.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft
  labels:
    tailscale.com/proxy-class: "minecraft"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: minecraft-server
      port:
        number: 25565
